@@ -1,0 +1,216 @@
+/* XPM */
+static char * dice1_xpm[] = {
+"30 30 3 1",
+" 	c None",
+".	c #000000",
+"+	c #FFFFFF",
+"..............................",
+".++++++++...++++++...++++++++.",
+".++++++..++++++++++++..++++++.",
+".+++++.++++++++++++++++.+++++.",
+".++++.++++++++++++++++++.++++.",
+".+++.++++++++++++++++++++.+++.",
+".++.++++++++++++++++++++++.++.",
+".+.++++++++++++++++++++++++.+.",
+".+.++++++++++++++++++++++++.+.",
+"..++++++++++++++++++++++++++..",
+"..++++++++++++++++++++++++++..",
+"..++++++++++++++++++++++++++..",
+".+++++++++++++..+++++++++++++.",
+".++++++++++++....++++++++++++.",
+".+++++++++++......+++++++++++.",
+".+++++++++++......+++++++++++.",
+".++++++++++++....++++++++++++.",
+".+++++++++++++..+++++++++++++.",
+"..++++++++++++++++++++++++++..",
+"..++++++++++++++++++++++++++..",
+"..++++++++++++++++++++++++++..",
+".+.++++++++++++++++++++++++.+.",
+".+.++++++++++++++++++++++++.+.",
+".++.++++++++++++++++++++++.++.",
+".+++.++++++++++++++++++++.+++.",
+".++++.++++++++++++++++++.++++.",
+".+++++.++++++++++++++++.+++++.",
+".++++++..++++++++++++..++++++.",
+".++++++++...++++++...++++++++.",
+".............................."};
+/* XPM */
+static char * dice2_xpm[] = {
+"30 30 3 1",
+" 	c None",
+".	c #000000",
+"+	c #FFFFFF",
+"..............................",
+".++++++++...++++++...++++++++.",
+".++++++..++++++++++++..++++++.",
+".+++++.++++++++++++++++.+++++.",
+".++++.++++++++++++++++++.++++.",
+".+++.++++++++++++++++++++.+++.",
+".++.++++++++++++++++..++++.++.",
+".+.++++++++++++++++....++++.+.",
+".+.+++++++++++++++......+++.+.",
+"..++++++++++++++++......++++..",
+"..+++++++++++++++++....+++++..",
+"..++++++++++++++++++..++++++..",
+".++++++++++++++++++++++++++++.",
+".++++++++++++++++++++++++++++.",
+".++++++++++++++++++++++++++++.",
+".++++++++++++++++++++++++++++.",
+".++++++++++++++++++++++++++++.",
+".++++++++++++++++++++++++++++.",
+"..++++++..++++++++++++++++++..",
+"..+++++....+++++++++++++++++..",
+"..++++......++++++++++++++++..",
+".+.+++......+++++++++++++++.+.",
+".+.++++....++++++++++++++++.+.",
+".++.++++..++++++++++++++++.++.",
+".+++.++++++++++++++++++++.+++.",
+".++++.++++++++++++++++++.++++.",
+".+++++.++++++++++++++++.+++++.",
+".++++++..++++++++++++..++++++.",
+".++++++++...++++++...++++++++.",
+".............................."};
+/* XPM */
+static char * dice3_xpm[] = {
+"30 30 3 1",
+" 	c None",
+".	c #000000",
+"+	c #FFFFFF",
+"..............................",
+".++++++++...++++++...++++++++.",
+".++++++..++++++++++++..++++++.",
+".+++++.++++++++++++++++.+++++.",
+".++++.++++++++++++++++++.++++.",
+".+++.++++++++++++++++++++.+++.",
+".++.++++++++++++++++..++++.++.",
+".+.++++++++++++++++....++++.+.",
+".+.+++++++++++++++......+++.+.",
+"..++++++++++++++++......++++..",
+"..+++++++++++++++++....+++++..",
+"..++++++++++++++++++..++++++..",
+".+++++++++++++..+++++++++++++.",
+".++++++++++++....++++++++++++.",
+".+++++++++++......+++++++++++.",
+".+++++++++++......+++++++++++.",
+".++++++++++++....++++++++++++.",
+".+++++++++++++..+++++++++++++.",
+"..++++++..++++++++++++++++++..",
+"..+++++....+++++++++++++++++..",
+"..++++......++++++++++++++++..",
+".+.+++......+++++++++++++++.+.",
+".+.++++....++++++++++++++++.+.",
+".++.++++..++++++++++++++++.++.",
+".+++.++++++++++++++++++++.+++.",
+".++++.++++++++++++++++++.++++.",
+".+++++.++++++++++++++++.+++++.",
+".++++++..++++++++++++..++++++.",
+".++++++++...++++++...++++++++.",
+".............................."};
+/* XPM */
+static char * dice4_xpm[] = {
+"30 30 3 1",
+" 	c None",
+".	c #000000",
+"+	c #FFFFFF",
+"..............................",
+".++++++++...++++++...++++++++.",
+".++++++..++++++++++++..++++++.",
+".+++++.++++++++++++++++.+++++.",
+".++++.++++++++++++++++++.++++.",
+".+++.++++++++++++++++++++.+++.",
+".++.++++..++++++++++..++++.++.",
+".+.++++....++++++++....++++.+.",
+".+.+++......++++++......+++.+.",
+"..++++......++++++......++++..",
+"..+++++....++++++++....+++++..",
+"..++++++..++++++++++..++++++..",
+".++++++++++++++++++++++++++++.",
+".++++++++++++++++++++++++++++.",
+".++++++++++++++++++++++++++++.",
+".++++++++++++++++++++++++++++.",
+".++++++++++++++++++++++++++++.",
+".++++++++++++++++++++++++++++.",
+"..++++++..++++++++++..++++++..",
+"..+++++....++++++++....+++++..",
+"..++++......++++++......++++..",
+".+.+++......++++++......+++.+.",
+".+.++++....++++++++....++++.+.",
+".++.++++..++++++++++..++++.++.",
+".+++.++++++++++++++++++++.+++.",
+".++++.++++++++++++++++++.++++.",
+".+++++.++++++++++++++++.+++++.",
+".++++++..++++++++++++..++++++.",
+".++++++++...++++++...++++++++.",
+".............................."};
+/* XPM */
+static char * dice5_xpm[] = {
+"30 30 3 1",
+" 	c None",
+".	c #000000",
+"+	c #FFFFFF",
+"..............................",
+".++++++++...++++++...++++++++.",
+".++++++..++++++++++++..++++++.",
+".+++++.++++++++++++++++.+++++.",
+".++++.++++++++++++++++++.++++.",
+".+++.++++++++++++++++++++.+++.",
+".++.++++..++++++++++..++++.++.",
+".+.++++....++++++++....++++.+.",
+".+.+++......++++++......+++.+.",
+"..++++......++++++......++++..",
+"..+++++....++++++++....+++++..",
+"..++++++..++++++++++..++++++..",
+".+++++++++++++..+++++++++++++.",
+".++++++++++++....++++++++++++.",
+".+++++++++++......+++++++++++.",
+".+++++++++++......+++++++++++.",
+".++++++++++++....++++++++++++.",
+".+++++++++++++..+++++++++++++.",
+"..++++++..++++++++++..++++++..",
+"..+++++....++++++++....+++++..",
+"..++++......++++++......++++..",
+".+.+++......++++++......+++.+.",
+".+.++++....++++++++....++++.+.",
+".++.++++..++++++++++..++++.++.",
+".+++.++++++++++++++++++++.+++.",
+".++++.++++++++++++++++++.++++.",
+".+++++.++++++++++++++++.+++++.",
+".++++++..++++++++++++..++++++.",
+".++++++++...++++++...++++++++.",
+".............................."};
+/* XPM */
+static char * dice6_xpm[] = {
+"30 30 3 1",
+" 	c None",
+".	c #000000",
+"+	c #FFFFFF",
+"..............................",
+".++++++++...++++++...++++++++.",
+".++++++..++++++++++++..++++++.",
+".+++++.++++++++++++++++.+++++.",
+".++++.++++++++++++++++++.++++.",
+".+++.++++++++++++++++++++.+++.",
+".++.++++..++++++++++..++++.++.",
+".+.++++....++++++++....++++.+.",
+".+.+++......++++++......+++.+.",
+"..++++......++++++......++++..",
+"..+++++....++++++++....+++++..",
+"..++++++..++++++++++..++++++..",
+".+++++++..++++++++++..+++++++.",
+".++++++....++++++++....++++++.",
+".+++++......++++++......+++++.",
+".+++++......++++++......+++++.",
+".++++++....++++++++....++++++.",
+".+++++++..++++++++++..+++++++.",
+"..++++++..++++++++++..++++++..",
+"..+++++....++++++++....+++++..",
+"..++++......++++++......++++..",
+".+.+++......++++++......+++.+.",
+".+.++++....++++++++....++++.+.",
+".++.++++..++++++++++..++++.++.",
+".+++.++++++++++++++++++++.+++.",
+".++++.++++++++++++++++++.++++.",
+".+++++.++++++++++++++++.+++++.",
+".++++++..++++++++++++..++++++.",
+".++++++++...++++++...++++++++.",
+".............................."};
